--- a/main.html
+++ b/main.html
@@ -7,9 +7,30 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<table border="1">
+		<thead>
+			<tr>
+				<th>roll number</th>
+				<th>name</th>
+		    </tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>7</td>
+				<td>Ronaldo</td>
+			</tr>
+			<tr>
+				<td>10</td>
+				<td>Messi</td>
+			</tr>
+			<tr>
+				<td>8</td>
+				<td>Xavi</td>
+			</tr>
+		</tbody>
+		
+	</table>
+   
 
 </body>
 
